# ChangeLog for media-libs/libmpeg3
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libmpeg3/ChangeLog,v 1.33 2005/04/08 01:43:29 eradicator Exp $

  29 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org>
  -libmpeg3-1.5-r1.ebuild, -libmpeg3-1.5.1.ebuild, libmpeg3-1.5.2-r1.ebuild:
  Make PIC hackery a bit more friendly to hardened folks.  Removed old versions.

  26 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org>
  libmpeg3-1.5.2-r1.ebuild:
  Make shared object on x86 without -fPIC because the asm isn't PIC safe.

*libmpeg3-1.5.2-r1 (26 Mar 2005)

  26 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org>
  +libmpeg3-1.5.2-r1.ebuild:
  Use correct toolchain compiler.  Use -fPIC correctly.

  08 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  +files/1.5.2-gentoo-multilib.patch, libmpeg3-1.5.2.ebuild:
  multilib fixes

  06 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libmpeg3-1.5.2.ebuild:
  get_libdir fixes.

  30 Sep 2004; Patrick Kursawe <phosphan@gentoo.org> libmpeg3-1.5.2.ebuild:
  Will get linking correctly now even if liba52 was compiled with djbfft.
  Adding metadata.xml.

  30 Sep 2004; Patrick Kursawe <phosphan@gentoo.org> libmpeg3-1.5.2.ebuild:
  Prefixed linker path with ${ROOT} (see bug #54377)

  28 Jul 2004; Tom Gall <tgall@gentoo.org> libmpeg3-1.5.2.ebuild:
  stable on ppc64, bug #55076

  16 May 2004; Mike Frysinger <vapier@gentoo.org> +files/1.5.2-gcc3.4.patch,
  libmpeg3-1.5.2.ebuild:
  Add gcc-3.4 patch by ecco@piggy.demon.nl #49452 by Jonathan Adamczewski

  12 May 2004; Alexander Gabert <pappy@gentoo.org> libmpeg3-1.5-r1.ebuild,
  libmpeg3-1.5.1.ebuild, libmpeg3-1.5.2.ebuild:
  removed hardened-gcc logic, is already replaced by filter-flags

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> libmpeg3-1.5.1.ebuild:
  Add inherit eutils

  27 Feb 2004; Seemant Kulleen <seemant@gentoo.org> libmpeg3-1.5-r1.ebuild,