@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libmpeg3/Attic/libmpeg3-1.5.2.ebuild,v 1.16 2004/11/22 22:41:09 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libmpeg3/Attic/libmpeg3-1.5.2.ebuild,v 1.17 2005/04/08 02:32:22 kugelfang Exp $
 
 inherit flag-o-matic eutils gcc
 
