@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libmpeg3
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libmpeg3/ChangeLog,v 1.33 2005/04/08 01:43:29 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libmpeg3/ChangeLog,v 1.34 2005/04/08 02:32:22 kugelfang Exp $
+
+  08 Apr 2005; Danny van Dyk <kugelfang@gentoo.org>
+  libmpeg3-1.5.2-r1.ebuild:
+  Remove really all non-PIC objects before making the shared library.
+  (See BUG #87820)
 
   29 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org>
   -libmpeg3-1.5-r1.ebuild, -libmpeg3-1.5.1.ebuild, libmpeg3-1.5.2-r1.ebuild:
